# dofus-opti

./: .gitignore  Cargo.toml  WORKSPACE.md  readme.md
core/: Cargo.toml
core/src/: lib.rs  model.rs
crates/builder/: Cargo.toml
crates/builder/src/: build.rs  main.rs  readme.md
crates/core/: Cargo.toml
crates/core/src/: file.rs  lib.rs  model.rs
crates/dofus_db/: Cargo.toml  readme.md
crates/dofus_db/src/: args.rs  dofus_db_file.rs  export.rs  file.rs  import.rs  lib.rs  main.rs  model.rs  parser.rs
crates/dofus_opti_legacy/: Cargo.toml
crates/dofus_opti_legacy/src/: dofus_db_export.rs  dofus_db_import.rs  main.rs
dofus_db/: Cargo.toml
dofus_db/src/: client.rs  file.rs  lib.rs  model.rs  parser.rs
golden/: amulet_gargandyas_necklace.json
src/: Cargo.toml  dofus_db_client.rs  dofus_db_client.rs.old  dofus_db_export.rs  dofus_db_file.rs  dofus_db_import.rs  dofus_db_models.rs  dofus_db_models.rs.old  dofus_db_parser.rs  dofus_db_parser.rs.old  dofus_db_type_id.rs  lib.rs  main.rs  model_parser.rs  models.rs  models.rs.old
src/superceded/: dofus_db_client.rs  dofus_db_file.rs  mod.rs  old_dofus_db_client.rs
