[workspace]
resolver = "2"
members = [
    "core",
    "dofus_db",
]

[workspace.dependencies]
anyhow = "1.0"
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = "0.3"
tempfile = "3"
clap = {version = "4.0", features = ["derive"]}